--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -1,4 +1,52 @@
+html {
+  font-family:
+    'Montserrat',
+    'Source Sans Pro',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    sans-serif;
+  font-size: 16px;
+  word-spacing: 1px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+}
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+p {
+  margin-bottom: .809em;
+  line-height: 1.6;
+}
+blockquote {
+  margin: 1.6rem 0;
+  font-style: italic;
+  font-size: 1.25rem;
+  line-height: 1.6;
+}
+svg>*{
+  user-select: none;
+  pointer-events: none;
+}
+
+.a--transparent {
+  color: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
 .btn {
   color: inherit;
   font-family: inherit;
