--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -111,6 +111,12 @@ img {
 @media screen and (max-width: 752px) {
   .container {grid-template-columns: calc(100vw - 2rem);}
 }
+@media screen and (min-width: 752px) {
+  h1 {
+    font-size: 64px;
+    line-height: 72px;
+  }
+}
 .skeleton {
   background: #f0f0f0;
   color: transparent;
