--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -9,7 +9,8 @@ html {
     'Helvetica Neue',
     Arial,
     sans-serif;
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 20px;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -17,36 +18,64 @@ html {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
-
+:root {
+  --rgb--light: 240, 240, 240;
+  --shadow--card: 0 0 2px rgba(0, 0, 0, 0.16), 0 0px 8px 4px rgba(0, 0, 0, 0.02);
+  --spacing--sm: 10px;
+  --spacing--md: 20px;
+  --spacing--lg: 30px;
+}
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
 }
-header {padding: 1rem;}
+header {
+  padding: var(--spacing--sm) var(--spacing--md);
+}
+/* H tags */
 h1 {
   font-size: 48px;
   line-height: 52px;
-  margin-bottom: 1.5rem;
+  margin-top: calc(2 * var(--spacing--md));
+  margin-bottom: var(--spacing--lg);
+  font-weight: 700;
 }
 h2 {
-  font-size: 32px;
-  line-height: 48px;
-  margin-bottom: 1rem;
+  font-size: 24px;
+  line-height: 32px;
+  margin-top: var(--spacing--lg);
+  margin-bottom: var(--spacing--md);
+  font-weight: 700;
 }
 
+h3, .t--h3 {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 400;
+}
 h3 {
-  font-size: 24px;
-  line-height: 36px;
+  margin-top: var(--spacing--md);
+  margin-bottom: var(--spacing--sm);
 }
 h4 {
-  font-size: 18px;
-  line-height: 27px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
 }
+/* Images & SVG */
+img {
+  width: 100%;
+  object-fit: cover;
+}
+svg>*{
+  user-select: none;
+  pointer-events: none;
+}
+/* P & blockquote */
 p {
-  margin-bottom: .809em;
-  line-height: 1.6;
+  margin-bottom: var(--spacing--md);
 }
 blockquote {
   margin: 1.6rem 0;
@@ -56,21 +85,23 @@ blockquote {
   line-height: 1.6;
   opacity: .8;
 }
-svg>*{
-  user-select: none;
-  pointer-events: none;
+/* Anchor y Button */
+a:hover,
+button:hover {
+  cursor: pointer;
 }
-img {
-  width: 100%;
-  object-fit: cover;
-}
-.a--transparent {
+a.transparent,
+button.transparent {
   color: inherit;
   font-size: inherit;
   font-family: inherit;
   text-decoration: none;
-  cursor: pointer;
 }
+/* TEXT CLASSES */
+.overtext { font-size: 12px; margin-top: 1rem; }
+.capitalize { text-transform: capitalize; }
+.bold { font-weight: bold; }
+/* BUTTON CLASSES */
 .btn {
   color: inherit;
   font-family: inherit;
@@ -80,48 +111,51 @@ img {
   border: 1px solid #0d0d0d;
   padding: .5em 1em;
 }
+/* CARD CLASSES */
 .card {
   background: white;
   border-radius: 8px;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.16), 0 0px 8px 4px rgba(0, 0, 0, 0.02);
+  box-shadow: var(--shadow--card);
   overflow: hidden;
 }
-.card__body {
-  padding: 1rem;
+.card__content {
+  padding: var(--spacing--sm);
 }
-/* LAYOUT */
+/* LAYOUT UTILS */
+.grid-layout {
+  display: grid;
+  --col-count: 4;
+  --col-width: 72px;
+  grid-template-columns: repeat(var(--col-count), 72px);
+  column-gap: var(--spacing--sm);
+  justify-content: center;
+}
+.col--4 { grid-column-end: span 4; }
+.col--all { grid-column: 1 / -1; }
+@media screen and (min-width: 760px) {
+  .grid-layout { --col-count: 8;}
+}
+@media screen and (min-width: 1000px) {
+  .grid-layout { --col-count: 12; }
+}
+/* FLEX UTILS */
 .flex {display: flex;}
 .flex--col {flex-direction: column;}
 .flex-wrap {flex-wrap: wrap;}
-.stack--row {display: grid;grid-auto-flow: row;}
-.stack--row.min-content {grid-auto-rows: min-content;}
-.stack--col {display: grid;grid-auto-flow: column;}
-.stack--col.min-content {grid-auto-columns: min-content;}
-.gap--sm {gap: .5rem;}
-.gap--md {gap: 1rem;}
-.gap--lg {gap: 2rem;}
+.gap--sm {gap: var(--spacing--sm);}
+.gap--md {gap: var(--spacing--md);}
+.gap--lg {gap: var(--spacing--lg);}
 .align-items--center {align-items: center;}
 .justify-content--center {justify-content: center;}
 .justify-content--start {justify-content: flex-start;}
 .justify-content--end {justify-content: flex-end;}
 .justify-content--space-between {justify-content: space-between;}
-
-.container {width: 100%;display: grid; grid-template-columns: var(--lane-w, 720px); justify-content: center;}
-
-@media screen and (max-width: 752px) {
-  .container {grid-template-columns: calc(100vw - 2rem);}
-}
-@media screen and (min-width: 752px) {
-  h1 {
-    font-size: 64px;
-    line-height: 72px;
-  }
-}
 .skeleton {
-  background: #f0f0f0;
+  background: rgb(var(--rgb--light));
   color: transparent;
 }
 
-.t--h3 {font-size: 24px; line-height: 24px;}
-.t--capitalize {text-transform: capitalize;}
-.t--overtext {font-size: 12px;margin-top: 1rem;}
+.display--contents { display: contents; }
+.mb--0 { margin-bottom: 0; }
+.mt--0 { margin-top: 0; }
+.mv--0 { margin-top: 0; margin-bottom: 0; }
