--- a/assets/style/blogpost.css
+++ b/assets/style/blogpost.css
@@ -1,35 +1,1 @@
-.container--blog {
-  --lane-w: 680px;
-}
-.container--blog ul, ol {
-  margin-bottom: 1em;
-}
-.container--blog  p,
-.container--blog li {
-  font-size: 18px;
-  line-height: 30px;
-}
-.container--blog p {
-  margin-top: 18px;
-}
-.container--blog blockquote>p {
-  margin: 30px 0;
-  padding-left: 1rem;
-  font-style: italic;
-  font-size: 20px;
-  font-weight: bold;
-}
-#scroll-progress {
-  height: .5rem;
-  position: sticky;
-  bottom: 0;
-  background: hsla(0, 0%, 95%, 1);
-}
-.scroll-progress__bar {
-  height: 100%;
-  width: var(--progress, 0%);
-  background: #4caf50;
-  transition: width ease-in .2s;
-  will-change: width;
-}
-
+@media screen and (min-width:360px){article{--font--size:16px;--line-height:24px}}@media screen and (min-width:425px){article{--font--size:18px;--line-height:28px}}.article-cover{background-color:var(--article-cover--bg-color,transparent)}.article-cover img{max-width:100%;height:min(500px,50vmin);min-height:200px;object-fit:cover;object-position:top}article{--col--max:8;justify-self:center;max-width:calc((var(--col--max) * var(--col--w)) + ((var(--col--max, 1) - 1) * var(--col--g)))}article p{margin-bottom:var(--spacing--sm)}article img{width:100%}article li{margin-bottom:1em}article blockquote{margin:30px 0;padding-left:1rem;font-style:italic;--font--size:20px;font-weight:bold}#scroll-progress{height:0.5rem;position:-webkit-sticky;position:sticky;bottom:0;background:#f2f2f2}.scroll-progress__bar{height:100%;width:var(--progress,0%);background:#4caf50;transition:width ease-in 0.2s;will-change:width}
