--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -1,75 +1,13 @@
-html {
-  font-family:
-    'Montserrat',
-    'Source Sans Pro',
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    'Helvetica Neue',
-    Arial,
-    sans-serif;
-  font-size: 14px;
-  line-height: 20px;
-  word-spacing: 1px;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  box-sizing: border-box;
-}
-:root {
-  --rgb--light: 240, 240, 240;
-  --shadow--card: 0 0 2px rgba(0, 0, 0, 0.16), 0 0px 8px 4px rgba(0, 0, 0, 0.02);
-  --spacing--sm: 10px;
-  --spacing--md: 20px;
-  --spacing--lg: 30px;
-}
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-}
 header {
   padding: var(--spacing--sm) var(--spacing--md);
 }
-/* H tags */
-h1 {
-  font-size: 48px;
-  line-height: 52px;
-  margin-top: calc(2 * var(--spacing--md));
-  margin-bottom: var(--spacing--lg);
-  font-weight: 700;
-}
-h2 {
-  font-size: 24px;
-  line-height: 32px;
-  margin-top: var(--spacing--lg);
-  margin-bottom: var(--spacing--md);
-  font-weight: 700;
-}
 
-h3, .t--h3 {
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: 400;
-}
-h3 {
-  margin-top: var(--spacing--md);
-  margin-bottom: var(--spacing--sm);
-}
-h4 {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-}
 /* Images & SVG */
 img {
   width: 100%;
   object-fit: cover;
 }
-svg>*{
+svg > * {
   user-select: none;
   pointer-events: none;
 }
@@ -83,7 +21,7 @@ blockquote {
   font-style: italic;
   font-size: 1.25rem;
   line-height: 1.6;
-  opacity: .8;
+  opacity: 0.8;
 }
 /* Anchor y Button */
 a:hover,
@@ -98,9 +36,16 @@ button.transparent {
   text-decoration: none;
 }
 /* TEXT CLASSES */
-.overtext { font-size: 12px; margin-top: 1rem; }
-.capitalize { text-transform: capitalize; }
-.bold { font-weight: bold; }
+.overtext {
+  font-size: 12px;
+  margin-top: 1rem;
+}
+.capitalize {
+  text-transform: capitalize;
+}
+.bold {
+  font-weight: bold;
+}
 /* BUTTON CLASSES */
 .btn {
   color: inherit;
@@ -109,18 +54,10 @@ button.transparent {
   text-decoration: none;
   border-radius: 4px;
   border: 1px solid #0d0d0d;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
 }
 /* CARD CLASSES */
-.card {
-  background: white;
-  border-radius: 8px;
-  box-shadow: var(--shadow--card);
-  overflow: hidden;
-}
-.card__content {
-  padding: var(--spacing--sm);
-}
+
 /* LAYOUT UTILS */
 .grid-layout {
   display: grid;
@@ -130,32 +67,24 @@ button.transparent {
   column-gap: var(--spacing--sm);
   justify-content: center;
 }
-.col--4 { grid-column-end: span 4; }
-.col--all { grid-column: 1 / -1; }
+.col--4 {
+  grid-column-end: span 4;
+}
+.col--all {
+  grid-column: 1 / -1;
+}
 @media screen and (min-width: 760px) {
-  .grid-layout { --col-count: 8;}
+  .grid-layout {
+    --col-count: 8;
+  }
 }
 @media screen and (min-width: 1000px) {
-  .grid-layout { --col-count: 12; }
+  .grid-layout {
+    --col-count: 12;
+  }
 }
-/* FLEX UTILS */
-.flex {display: flex;}
-.flex--col {flex-direction: column;}
-.flex-wrap {flex-wrap: wrap;}
-.gap--sm {gap: var(--spacing--sm);}
-.gap--md {gap: var(--spacing--md);}
-.gap--lg {gap: var(--spacing--lg);}
-.align-items--center {align-items: center;}
-.justify-content--center {justify-content: center;}
-.justify-content--start {justify-content: flex-start;}
-.justify-content--end {justify-content: flex-end;}
-.justify-content--space-between {justify-content: space-between;}
 .skeleton {
   background: rgb(var(--rgb--light));
   color: transparent;
 }
-
-.display--contents { display: contents; }
-.mb--0 { margin-bottom: 0; }
-.mt--0 { margin-top: 0; }
-.mv--0 { margin-top: 0; margin-bottom: 0; }
+/* UTILS */
