--- a/assets/scss/partials/_fonts.scss
+++ b/assets/scss/partials/_fonts.scss
@@ -7,7 +7,7 @@ h1,
 }
 h1,
 .t--h1--margin {
-  margin-top: calc(2 * var(--spacing--lg));
+  margin-top: var(--spacing--sm);
   margin-bottom: var(--spacing--lg);
 }
 
