--- a/assets/scss/blogpost.scss
+++ b/assets/scss/blogpost.scss
@@ -37,11 +37,12 @@ article {
     margin-bottom: 1em;
   }
   blockquote {
-    margin: 30px 0;
-    padding-left: 1rem;
+    padding: 20px 10px 20px 20px;
+    margin-bottom: 10px;
+    border-left: 6px solid rgba(var(--c--dark), 0.2);
+    background-color: rgba(var(--c--dark), 0.05);
     font-style: italic;
     --font--size: 20px;
-    font-weight: bold;
   }
 }
 
