--- a/assets/scss/partials/_fonts.scss
+++ b/assets/scss/partials/_fonts.scss
@@ -1,9 +1,13 @@
 /* H tags */
 h1,
+h2,
+h3 {
+  font-weight: 700;
+}
+h1,
 .t--h1 {
   font-size: 36px;
   line-height: 48px;
-  font-weight: 700;
 }
 h1,
 .t--h1--margin {
@@ -15,7 +19,6 @@ h2,
 .t--h2 {
   font-size: 24px;
   line-height: 32px;
-  font-weight: 700;
 }
 h2,
 .t--h2--margin {
@@ -27,7 +30,6 @@ h3,
 .t--h3 {
   font-size: 18px;
   line-height: 24px;
-  font-weight: 400;
 }
 h3,
 .t--h3--margin {
