--- a/assets/scss/partials/_cards.scss
+++ b/assets/scss/partials/_cards.scss
@@ -7,6 +7,10 @@
     padding: spacing("md");
   }
 }
+.card__media {
+  width: 100%;
+  overflow: hidden;
+}
 .card__thumbnail {
   width: 100%;
   height: 168px;
