--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,5 @@
 @import "partials/base";
-@import "partials/fonts";
+@import "partials/text";
 @import "partials/grid";
 @import "partials/cards";
 
