--- a/assets/scss/partials/_text.scss
+++ b/assets/scss/partials/_text.scss
@@ -4,6 +4,7 @@ h2,
 h3 {
   font-weight: 700;
 }
+
 h1,
 .t--h1 {
   font-size: 36px;
@@ -14,7 +15,6 @@ h1,
   margin-top: var(--spacing--sm);
   margin-bottom: var(--spacing--lg);
 }
-
 h2,
 .t--h2 {
   font-size: 24px;
@@ -56,4 +56,10 @@ strong {
 }
 .capitalize {
   text-transform: capitalize;
+}
+.t--center {
+  text-align: center;
+}
+.t--normal {
+  font-weight: 400;
 }
