--- a/src/app.css
+++ b/src/app.css
@@ -36,7 +36,7 @@ body {
   --shape-size: calc(var(--app-size) * .5);
   margin: 0;
   min-height: 100vh;
-  min-height: 100svh;
+  min-height: 100dvh;
   position: relative;
 }
 
@@ -57,9 +57,13 @@ button {
   left: 0;
   overflow: hidden;
 }
-
-#bg::before,
-#bg::after {
+#bg>div {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+}
+#bg>div::before,
+#bg>div::after {
   position: absolute;
   content: "";
   width: var(--shape-size);
@@ -67,13 +71,13 @@ button {
   border-radius: 50%;
   transform-origin: center center;
 }
-#bg::before {
+#bg>div::before {
   --x0: calc((100vw - var(--app-size)) / 2);
   background-color: rgba(var(--rgb-gray-2), 0.6);
   top: calc(100% - (var(--shape-size) * 0.6));
   left: calc(var(--x0));
 }
-#bg::after {
+#bg>div::after {
   z-index: -1;
   background-color: rgba(var(--rgb-white), 0.4);
   bottom: calc(100% - (var(--shape-size) * 0.67));
