--- a/src/app.css
+++ b/src/app.css
@@ -118,8 +118,8 @@ button {
 .slide-in-down+.slide-in-down{
   animation-delay: 100ms;
 }
-.fade-in {
-  animation: fade-in 400ms ease-in-out;
+.scale-in {
+  animation: scale-in 400ms ease-in-out;
   animation-fill-mode: both;
 }
 @keyframes slide-in-left {
@@ -145,13 +145,11 @@ button {
     opacity: 1;
   }
 }
-@keyframes fade-in {
+@keyframes scale-in {
   from {
-    opacity: 0;
     transform: scale(0);
   }
   to {
-    opacity: 1;
     transform: scale(1);
   }
 }
