--- a/src/app.css
+++ b/src/app.css
@@ -62,6 +62,9 @@ button {
   appearance: none;
   outline: none;
 }
+svg {
+  fill: currentColor;
+}
 
 #app {
   z-index: 2;
@@ -69,7 +72,8 @@ button {
   min-height: 100svh;
   width: 100vw;
   display: flex;
-  place-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .text--vertical{
   writing-mode: vertical-rl;
