--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,7 @@
   --c-text: rgb(var(--c-text--light));
 
   --app-size: min(1280px, 100vw);
-
+  --gap: 20px;
 
 
   color-scheme: light;
@@ -64,16 +64,16 @@ button {
 svg {
   fill: currentColor;
 }
-
-#app {
-  z-index: 2;
-  min-height: 100vh;
-  min-height: 100svh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+svg.icon {
+  fill: none;
+  stroke: currentColor;
+  stroke-width: 1;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  height: 24px;
+  width: 24px;
 }
+
 .text--vertical{
   writing-mode: vertical-rl;
   text-orientation: upright;
