--- a/src/app.css
+++ b/src/app.css
@@ -15,25 +15,59 @@
   --full-width: 100vw;
   --dynamic-h: calc(100lvh - 100dvh);
   --dynamic-w: calc(100lvw - 100dvw);
+
+  --rgb-card-default-bg-light: 250, 250, 250;
+  --rgb-card-default-bg-dark: 24, 24, 24;
+  --rgb-card-default-bg: var(--rgb-card-default-bg-light);
+
+
+  --rgb-card-default-color-light: 36, 36, 36;
+  --rgb-card-default-color-dark: 250, 250, 250;
+  --rgb-card-default-color: var(--rgb-card-default-color-light);
+
+  --c-card-default-bg: rgb(var(--rgb-card-default-bg));
+  --c-card-default-color: rgb(var(--rgb-card-default-color));
+
+
+  --c-input-bg-light: rgba(0,0,0,0.025);
+  --c-input-bg-dark: rgba(250,250,250,0.025);
+  --c-input-focus-light: rgba(0,0,0,0.1);
+  --c-input-focus-dark: rgba(250,250,250,0.1);
+
+
+  --c-inpot-success-color: hsl(84, 90%, 50%);
+  --c-input-error-dark: hsl(350, 70%, 60%);
+  --c-input-error-light: hsl(350, 90%, 50%);
+  --c-input-error-color: var(--c-input-error-light);
+
+  --c-input-focus: var(--c-input-focus-light);
+  --c-input-bg: var(--c-input-bg-light);
 }
 
+
+/*
+  DARK MODE
+*/
 :root[theme="dark"] {
   --c-color: rgba(var(--rgb-color--dark), 0.8);
   --c-bg: rgb(var(--rgb-bg--dark));
+
+
+  --rgb-card-default-bg: var(--rgb-card-default-bg-dark);
+  --rgb-card-default-color: var(--rgb-card-default-color-dark);
   background: linear-gradient(160deg, #010101 70%, #2a2a2a);
+
+  --c-input-focus: var(--c-input-focus-dark);
+  --c-input-bg: var(--c-input-bg-dark);
+  --c-input-error-color: var(--c-input-error-dark);
+
+  input:focus,
+  textarea:focus {
+    background: var(--c-input-focus-dark, );
+  }
 }
-svg.icon {
-  fill: currentColor;
-  stroke: none;
-  height: var(--icon-size, 24px);
-  width: var(--icon-size, 24px);
-  stroke-width: 0;
-}
-.icon.icon--stroke {
-  fill: none;
-  stroke: currentColor;
-  stroke-width: 2;
-}
+
+
 *,
 *::before,
 *::after {
@@ -43,16 +77,7 @@ svg.icon {
   font-weight: normal;
   user-select: none;
 }
-span {
-  font-size: inherit;
-  font-weight: inherit;
-  color: inherit;
-}
-.btn {
-  color: var(--c-btn-color, inherit);
-  background-color: var(--c-btn-bg, inherit);
-  border:none;
-}
+
 body {
   display: flex;
   flex-direction: column;
@@ -71,7 +96,63 @@ header {
   grid-template-rows: auto 1fr;
   grid-auto-flow: row;
 }
+img {
+  user-select: none;
+  pointer-events: none;
+}
+span {
+  font-size: inherit;
+  font-weight: inherit;
+  color: inherit;
+}
+.btn {
+  color: var(--c-btn-color, inherit);
+  background-color: var(--c-btn-bg, inherit);
+  border:none;
+}
+button:disabled.btn {
+  opacity: 0.3;
+  color: #0f0f0f;
+  background-color: #d3d3d3;
+}
 
+
+
+/*
+  ICON / ICON STROKE / ICON ROUND
+*/
+svg.icon {
+  fill: currentColor;
+  stroke: none;
+  height: var(--icon-size, 24px);
+  width: var(--icon-size, 24px);
+  stroke-width: 0;
+}
+.icon.icon--stroke {
+  fill: none;
+  stroke: currentColor;
+  stroke-width: 2;
+}
+.icon--round {
+  background-color: var(--c-btn-color);
+  color: var(--c-btn-bg);
+  --icon-size: 2rem;
+  height: 3.25rem;
+  width: auto;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+
+/*
+  CANVAS WRAPPER / RIVE / THREEJS
+*/
 .model-container {
   height: 100%;
   width: 100%;
@@ -80,6 +161,11 @@ header {
   height: 100%;
   width: 100%;
 }
+
+
+
+
+
 /*
   UTILS / HIDDEN / FLEX / GRID
 */
@@ -100,15 +186,19 @@ header {
   align-items: center;
 }
 
+
+
+
 /*
   CARD / CARD BODY / CARD ACTION
 */
 .card {
+  --card-padding: 2rem;
   --card-radius: 40px;
   border-radius: var(--card-radius);
   overflow: hidden;
-  background-color: var(--card-bg, #d9d9d9);
-  color: var(--card-color, inherit);
+  background-color: var(--c-card-bg, var(--c-card-default-bg));
+  color: var(--c-card-color, var(--c-card-default-color));
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
@@ -121,7 +211,7 @@ header {
   width: 100%;
 }
 .card__body {
-  padding: 2rem;
+  padding: var(--card-padding);
 }
 .card>.card__body:only-child {
   height: 100%;
@@ -132,16 +222,52 @@ header {
 .card__actions {
   margin-top: auto;
   display: flex;
-  padding: 2rem;
+  padding: var(--card-padding);
+}
+.card__tools {
+  display: flex;
+  justify-content: space-between;
+  padding: var(--card-padding);
+  padding-bottom: 0;
 }
 .actions--bottom {
   margin-top: auto;
 }
-
 .card__body + .card__actions {
   padding-top: 0;
 }
+.form__title {
+  display: flex;
+  justify-content: center;
+}
+.form__title>strong {
+  font-weight: bold;
+  font-size: 2em;
+  padding: .2rem;
+}
+.form__title>hr {
+  width: 100%;
+  height: 1px;
+  appearance: none;
+  background: var(--c-color);
+  border-style: none;
+  margin: auto;
+}
+.modal>.card {
+  min-width: min(360px, calc(100vw - 5rem));
+}
+.card button {
+  --c-btn-bg: var(--c-card-default-bg);
+  --c-btn-color: var(--c-card-default-color);
+}
 
+
+
+
+
+/*
+  HEADINGS / H2 / H3
+*/
 h2 {
   font-variation-settings: "wght" 520;
   font-size: clamp(2rem, 4vw, 3.75rem);
@@ -151,16 +277,19 @@ h2 {
 }
 h3 {
   font-variation-settings: "wght" 520;
-  font-size: clamp(1.5rem, 3vw, 2rem);
+  font-size: clamp(2rem, 6vw, 3rem);
   text-transform: uppercase;
   font-weight: bold;
   line-height: 1;
 }
-img {
-  user-select: none;
-  pointer-events: none;
-}
 
+
+
+
+
+/*
+  DIALOG / MODAL
+*/
 dialog {
   margin: auto;
   border: none;
@@ -185,7 +314,202 @@ dialog[open]::backdrop {
     backdrop-filter: blur(0px)  saturate(1);
   }
 }
+dialog button.btn--close {
+  margin: 0;
+  padding: 0;
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+}
+.btn--close>.icon--round{
+  background-color: rgba(var(--rgb-card-default-color), 0.05);
+  color: var(--c-card-default-color);
+}
+:root[theme="dark"] .btn--close>.icon--round{
+  background-color: rgba(var(--rgb-card-default-color), 0.05);
+  color: var(--c-card-default-color);
+}
 
+
+
+
+/*
+  FORM / LABEL / INPUT / FORM
+*/
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+label {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: start;
+  text-align: left;
+  color: hsl(var(--hsl-form));
+  position: relative;
+}
+.input-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column-reverse;
+}
+input,
+textarea {
+  border: none;
+  outline: none;
+  appearance: unset;
+  padding: .5em;
+  background-color: hsl(var(--hsl-form));
+  border-radius: .5rem;
+  will-change: box-shadow;
+  transition: all 200ms ease-in-out;
+  color: var(--bg-form);
+  font-size: 2rem;
+  background: var(--c-input-bg);
+  width: 100%;
+}
+textarea {
+  resize: none;
+  font-family: inherit;
+}
+input:focus,
+textarea:focus {
+  --hsl-form: var(--hsl-form-focus);
+  box-shadow:
+    hsla(var(--hsl-form), 0.2) 0px 5px,
+    hsla(var(--hsl-form), 0.1) 0px 10px,
+    hsla(var(--hsl-form), 0.05) 0px 15px;
+  background: var(--c-input-focus);
+}
+
+.validity-message.show+input,
+.validity-message.show+textarea {
+  animation: shake 500ms ease;
+  animation-iteration-count: 2;
+}
+
+.validity-message {
+  font-size: .75rem;
+  min-height: 2em;
+  padding-top: .5em;
+  line-height: 1;
+  color: var(--c-input-error-color);
+}
+
+.input__label {
+  opacity: 0.5;
+}
+label:focus-within  .input__label {
+  opacity: 1;
+}
+/*
+ BUTTON SEND / SUBMIT FORM
+*/
+.btn--send-wrapper {
+  line-height: 1;
+  font-size: 2rem;
+  padding: 4px;
+  border-radius: 1.5em;
+  position: relative;
+  z-index: 1;
+  width: 100%;
+}
+form .btn--send-wrapper::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  height: 100%;
+  width: 100%;
+  border-radius: 1.5em;
+  z-index: -1;
+}
+.btn--send-wrapper>small {
+  display: block;
+  text-align: center;
+  font-size: .75rem;
+  line-height: 1;
+  height: 1.5rem;
+}
+.btn--send {
+  line-height: 1;
+  font-size: 2rem;
+  padding: .5em;
+  padding: 0;
+  border-radius: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: var(--c-btn-bg, var(--c-color));
+  color: var(--c-btn-color, var(--c-bg));
+  will-change: background, opacity, color;
+  transition: all 300ms ease-in-out;
+  display: flex;
+  justify-content: center;
+}
+button:disabled.btn--send {
+  background: linear-gradient(310deg, #d3d3d3, #d3d3d3);
+}
+.btn--send:not(:disabled) {
+  background: linear-gradient(310deg, hsl(204, 100%, 49%) 0%, hsl(217, 100%, 46%) 90%);
+  color: rgb(250,250,250);
+  box-shadow:0px 4px 8px hsla(204, 100%, 49%, 0.3);
+}
+.btn--send>.btn__label {
+  padding: .5em 1em;
+  padding-right: 0;
+}
+.btn--send>.btn__icon {
+  height: 2em;
+  width: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  --icon-size: .9em;
+}
+.btn--send>.btn__icon>svg {
+  margin: auto;
+}
+.btn--send:not(:disabled) .on--disabled {
+  display: none;
+}
+.btn--send:disabled .on--enabled {
+  display: none;
+}
+
+
+
+
+/*
+  KEYFRAME ANIMATIONS
+*/
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
 @keyframes slide-l {
   from {
     opacity: 0;
@@ -216,10 +540,6 @@ dialog[open]::backdrop {
     transform: translateX(0);
   }
 }
-
-/*
-  KEYFRAME ANIMATIONS
-*/
 @keyframes grow {
   from {
     transform: scale(0);
@@ -228,7 +548,6 @@ dialog[open]::backdrop {
     transform: scale(1);
   }
 }
-
 @keyframes slide-in {
   from {
     transform: translateY(150px) scale(0.95);
@@ -252,10 +571,23 @@ dialog[open]::backdrop {
       font-size: 2rem;
     }
     .card {
-      --card-radius: 1.25rem;
+      --card-radius: 2rem;
+      --card-padding: 1.5rem;
     }
-    .card__body,
-    .card__actions {
-      padding: 1rem;
+    .modal>.card {
+      width: 100%;
+    }
+    .icon--round {
+      height: 2rem;
+      --icon-size: 1.25rem;
+    }
+
+    input,
+    textarea {
+      font-size: 1.5rem;
+    }
+
+    .btn--send {
+      font-size: 1.5rem;
     }
   }
